@@ -19,6 +19,7 @@ since 1.2 relase ( 'til 1.3 beta 1 :-)
     - print range, page setup, hidden columns/row, comments
 - Added subtotal dialog and formula
 - Paper layout can now be applied to all sheets
+- now you can define the default cell style
 
 
 New functions:
